--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   flutter:
     sdk: flutter
   firebase_database: ^3.0.7
+  flutter_slidable: ^0.5.4
   firebase_auth: ^0.15.5+3
   simple_animations: ^1.3.11
   flutter_progress_button: ^0.6.2
