--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   firebase_auth: ^0.15.5+3
   simple_animations: ^1.3.11
   flutter_progress_button: ^0.6.2
+  intl: 0.15.7
   
 
   # The following adds the Cupertino Icons font to your application.
