--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,24 +17,22 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
+  intl: 0.15.7
+  fluttertoast: ^4.0.0
+  progress_dialog: ^1.2.0
+  flutter_spinkit: "^4.1.2"
   flutter:
     sdk: flutter
-  firebase_database: ^3.0.7
   flutter_slidable: ^0.5.4
-  firebase_auth: ^0.15.5+3
   simple_animations: ^1.3.11
   flutter_progress_button: ^0.6.2
-  intl: 0.15.7
-  
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  eva_icons_flutter: ^2.0.0
+  
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
+  
 
 
 # For information on the generic Dart part of this file, see the
