--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ environment:
 dependencies:
   intl: 0.15.7
   fluttertoast: ^4.0.0
+  http: ^0.12.1
   progress_dialog: ^1.2.0
   flutter_spinkit: "^4.1.2"
   flutter:
