--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   flutter_slidable: ^0.5.4
   simple_animations: ^1.3.11
   flutter_progress_button: ^0.6.2
+  firebase_messaging: ^6.0.13
+  flutter_local_notifications: ^1.4.3
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
