--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,6 @@ environment:
 dependencies:
   intl: 0.15.7
   fluttertoast: ^4.0.0
-  http: ^0.12.1
   progress_dialog: ^1.2.0
   flutter_spinkit: "^4.1.2"
   flutter:
@@ -32,6 +31,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  http: any
+
   
 
 dev_dependencies:
