--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   simple_animations: ^1.3.11
   flutter_progress_button: ^0.6.2
   firebase_messaging: ^6.0.13
+  firebase_auth: ^0.15.5+3
   flutter_local_notifications: ^1.4.3
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
