--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,11 @@ dependencies:
   
 
 dev_dependencies:
-  
+  flutter_launcher_icons: "^0.7.3"
+flutter_icons:
+  ios: true
+  android: true
+  image_path: "assets/images/logoflutter.png"  
 
 
 # For information on the generic Dart part of this file, see the
